tests/NormalTests/paczka1/fuzzy1/91913838.err
Error in line 8: A218 A985 17,5
Error in line 15: A218 S219 259,28
Error in line 13: zSOU A985 47,4
Error in line 11: jJvIp A218 84,4
Error in line 30: jJvIp A985 69,7
Error in line 27: AzpWP124KC S219 223,5
Error in line 36: A218 A985 2,60
Error in line 31: geBsY13Eu A218 8,1
Error in line 17: YKD A985 9,2
